LP Susie: Editing css files

--- a/styles/main.css
+++ b/styles/main.css
@@ -1,6 +1,6 @@
-@import url(./_reset.css);
-@import url(./_variables.css);
-@import url(./_fonts.css);
+@import url(_fonts.css);
+@import url(_reset.css);
+@import url(_variables.css);
 
 .container {
     width: 100%;
